@@ -1,5 +1,5 @@
-#######TODO: CREATE CONFIG FILE
+//TODO: CREATE CONFIG FILE
 
-#PLANNED CONFIGURATIONS: (PUT ALL PLANNED CONFIGS HERE)
-# *enable-money enables / disables the money system
-# *
+//PLANNED CONFIGURATIONS: (PUT ALL PLANNED CONFIGS HERE)
+// *enable-money enables / disables the money system
+// *
